# Spatial_interpolation_analysis

./: .gitignore  README.md  pyproject.toml
data/: sondage_clean.csv
notebook/: Deterministic_interpolation.ipynb  Geostatistical_interpolation.ipynb
