[tool.poetry]
name = "sitg_map"
version = "0.1.0"
description = ""
authors = ["Lorenzo <lorenzo.perozzi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
pyvista = "^0.33.2"
geopandas = "^0.10.2"
scikit-learn = "^1.0.2"
verde = "^1.6.1"
seaborn = "^0.11.2"
geostatspy = "^0.0.25"
Cartopy = "^0.20.2"
pyvistaqt = "^0.7.0"
PyQt5 = "^5.15.6"
gemgis = "^0.1.18"
rasterio = "^1.2.10"
pygeos = "^0.12.0"
numba = "^0.55.1"
numpy = "^1.21"
statsmodels = "^0.13.2"
tqdm = "^4.63.1"
plotly-express = "^0.4.1"
nbformat = "^5.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
